update file index

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <body>
 <h1>Website pertama saya belajara JavaScript dan Gituhub</h1>
 <h2>JavaScript Arrays</h2>
-
+<h2>HTML Image</h2> <image src="Channel art4.png" alt="Channel" widht="500" height="333">
 <p id="demo"></p>
-
 <script>
 var cars = ["Saab", "Volvo", "BMW"];
 document.getElementById("demo").innerHTML = cars;
